syntax = "proto3";
package poktroll.gateway;

option go_package = "github.com/pokt-network/poktroll/x/gateway/types";
option (gogoproto.stable_marshaler_all) = true;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "poktroll/x/gateway/Params";
  option (gogoproto.equal) = true;

  cosmos.base.v1beta1.Coin min_stake  = 1 [(gogoproto.jsontag) = "min_stake"];
}
